--- a/projeto00_dash_excel_medicos.html
+++ b/projeto00_dash_excel_medicos.html
@@ -8,7 +8,7 @@
 
 <head>
 	<!-- COLOCAR O NOME DO PROJETO AQUI -->
-	<title>Dashboard de Atendimentos Médicos</title>
+	<title>Dashboard for a medical clinic</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -33,10 +33,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -46,34 +46,34 @@
 		<section id="projeto-header">
 			<header class="major">
 				<div class="col-12"></div>
-				<h2>Dashboard de Atendimentos Médicos</h2>
+				<h2>Dashboard for a medical clinic</h2>
 			</header>
 
 		</section>
 		<!-- BLOCO DE CONTEUDO -->
 		<section id="sobre">
-			<h2>Sobre o projeto</h2>
+			<h2>About the project</h2>
 			<p>
-				Dashboard para uma clínica médica, elaborado com dados fictícios fornecidos pela Simplifica Treinamentos. 
-				A análise dos atendimentos foi realizada levando em conta as seguintes informações:
+				Dashboard for a medical clinic, created using fictional data provided by Simplifica Treinamentos. 
+				The analysis of patient visits was based on the following information:
 			</p>
 			<ul>
-				<li>A empresa atende por convênio e de forma particular;</li>
-				<li>Alguns médicos podem solicitar retorno dos seus pacientes e quando isso acontece dentro de um período de 90 dias, estas consultas, denominadas 'retorno', não são cobradas;</li>
-				<li>Os médicos podem solicitar exames aos pacientes, que ficam vinculados na base de dados da empresa.</li>
+				<li>The clinic serves both insurance-covered and private patients;</li>
+				<li>Some doctors may request follow-up appointments for their patients, and if these occur within 90 days, these consultations—termed 'follow-up'—are not charged;</li>
+				<li>Doctors may request exams for patients, which are linked to the company's database.</li>
 			</ul>
 			<p>
-				Dessa forma, o relatório foi gerado para analisar os seguintes parâmetros:
+				Thus, the report was generated to analyze the following parameters:
 			</p>
 			<ul>
-				<li>Atendimentos por médico;</li>
-				<li>Atendimentos por especialidade;</li>
-				<li>Atendimentos por período;</li>
-				<li>Atendimentos por tipo de pagamento;</li>
-				<li>Receita por tipo de pagamento.</li>
+				<li>Visits by doctor;</li>
+				<li>Visits by specialty;</li>
+				<li>Visits by period;</li>
+				<li>Visits by payment type;</li>
+				<li>Revenue by payment type.</li>
 			</ul>
 			<p>
-				Você pode visualizar o dashboard no vídeo abaixo:
+				You can view the dashboard in the video below:
 			</p>
 			<iframe width="672" height="378" src="https://www.youtube.com/embed/L6GlMactDOM?si=kpEE8jMF09WmrcKX" 
 			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -81,7 +81,7 @@
 		</br>
 		<!-- FIM DO BLOCO DE CONTEUDO -->
 		<ul class="actions">
-			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Back</a></li>
 		</ul>
 	</div>
 
