--- a/projeto00_dash_pbi_vendas.html
+++ b/projeto00_dash_pbi_vendas.html
@@ -8,7 +8,7 @@
 
 <head>
 	<!-- COLOCAR O NOME DO PROJETO AQUI -->
-	<title>Relatório de Vendas no PBI</title>
+	<title>Sales report using Power BI</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -33,10 +33,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -46,35 +46,35 @@
 		<section id="projeto-header">
 			<header class="major">
 				<div class="col-12"></div>
-				<h2>Relatório de Vendas no Power BI</h2>
+				<h2>Sales report using Power BI</h2>
 			</header>
 		</section>
 		<!-- BLOCO DE CONTEUDO -->
 		<section id="sobre">
-			<h2>Sobre o projeto</h2>
+			<h2>About the project</h2>
 			<p>
-				Dashboard para a área de vendas, desenvolvido com dados fictícios fornecidos pela Hashtag Treinamentos. O excel foi utilizado como fonte de dados. 
-				O relatório de vendas tem como objetivo o acompanhamento dos seguintes indicadores:
+				Dashboard for the sales department, developed using fictional data provided by Hashtag Treinamentos. Excel was used as the data source. 
+				The sales report aims to track the following indicators:
 			</p>
 			<ul>
-				<li>Faturamento total;</li>
-				<li>Faturamento mensal;</li>
-				<li>Total de pedidos;</li>
-				<li>Pedidos mensais;</li>
-				<li>Lucro total;</li>
-				<li>Margem de lucro;</li>
-				<li>Devoluções mensais;</li>
-				<li>Análises por marcas, lojas, categorias de produtos, entre outras.</li>
+				<li>Total revenue;</li>
+				<li>Monthly revenue;</li>
+				<li>Total number of orders;</li>
+				<li>Monthly orders;</li>
+				<li>Total profit;</li>
+				<li>Profit margin;</li>
+				<li>Monthly returns;</li>
+				<li>Analyses by brands, stores, product categories, and more.</li>
 			</ul>
 			<p>
-				Você pode visualizar o dashboard abaixo, de forma 100% interativa:
+				You can view the fully interactive dashboard below:
 			</p>
 			<iframe width="100%" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiZDNjMDg2YTktNDEyOS00NDg3LTkwMzctZGM0ZDcwNDhlMzE0IiwidCI6ImRmNmUyYjI2LWQ3ZjUtNGZjYS05NDg2LThmNTg2ZjA4ZTEyMiJ9"></iframe>
 		</section>
 		</br>
 		<!-- FIM DO BLOCO DE CONTEUDO -->
 		<ul class="actions">
-			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Back</a></li>
 		</ul>
 	</div>
 
