--- a/projeto04_automacao.html
+++ b/projeto04_automacao.html
@@ -60,7 +60,7 @@
 		<!-- BLOCO DE CONTEUDO -->
 		<section id="sobre">
 			<h2>About the project</h2>
-			<p><span class="image right"><img src="images/thumbs_proj/automacao.jpg" alt=""></span>
+			<p><span class="image right"><img src="images/thumbs/selenium.png" alt=""></span>
 				This project consists of simulating purchases on the Saucedemo website. The project was carried out using Python and Selenium.
 			</p>
 			<p>
