--- a/projeto05_previsaotempo.html
+++ b/projeto05_previsaotempo.html
@@ -61,7 +61,7 @@
 		<section id="sobre">
 			<!-- Sobre o projeto -->
 			<h2>About the project</h2>
-			<p> <span class="image right"><img src="images/thumbs_proj/apihg.jpg" alt=""></span>
+			<p> <span class="image right"><img src="images/thumbs/apihg.jpg" alt=""></span>
 				This project was carried out entirely on the Google Cloud Platform (GCP) and consists of the following stages:
 			</p>
 			<ul>
