--- a/projeto06_breweries.html
+++ b/projeto06_breweries.html
@@ -62,7 +62,7 @@
 		<section id="sobre">
 			<!-- Sobre o projeto -->
 			<h2>About the project</h2>
-			<p> <span class="image right"><img src="images/thumbs_proj/breweries.jpg" alt=""></span>
+			<p> <span class="image right"><img src="images/thumbs/cervejaria.png" alt=""></span>
 				This project involves a pipeline designed to extract, process, and store data on breweries obtained from the Open Brewery DB API. The project uses Apache Airflow to orchestrate the data pipeline, ensuring that each step is executed reliably and consistently. The following tools were used in this project:
 			</p>
 			<ul>
