--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Projetos</title>
+	<title>Projects</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
