--- a/projeto03_pinguins.html
+++ b/projeto03_pinguins.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Projeto Pinguins</title>
+	<title>Penguins project</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
@@ -32,10 +32,10 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/img01.png" alt="" /></a>
 			<ul class="sidebar">
-				<li><a href="index.html" class="sidebar-link">Início</a></li>
-				<li><a href="sobre.html" class="sidebar-link">Sobre mim</a></li>
-				<li><a href="portfolio.html" class="sidebar-link">Projetos</a></li>
-				<li><a href="certificados.html" class="sidebar-link">Certificados</a></li>
+				<li><a href="index.html" class="sidebar-link">Home</a></li>
+				<li><a href="sobre.html" class="sidebar-link">About me</a></li>
+				<li><a href="portfolio.html" class="sidebar-link">Projects</a></li>
+				<li><a href="certificados.html" class="sidebar-link">Certificates</a></li>
 			</ul>
 		</div>
 	</header>
@@ -45,12 +45,12 @@
 		<section id="projeto-header">
 			<header class="major">
 				<div class="col-12"></div>
-				<h2>Análise das características de três espécies de pinguins</h2>
+				<h2>Analysis of the characteristics of three species of penguins</h2>
 			</header>
 			<ul class="actions fit small">
 				<li>
 					<a href="https://github.com/carolysg/projeto-pinguins/tree/main"
-						class="button icon brands small fit fa-github solid" target="_blank">Repositório do Github</a>
+						class="button icon brands small fit fa-github solid" target="_blank">Github repository</a>
 				</li>
 				<li>
 					<a href="https://www.kaggle.com/datasets/larsen0966/penguins" class="button fit small" target="_blank">Dataset</a>
@@ -60,143 +60,126 @@
 		<!-- Conteúdo vai aqui -->
 		<section id="sobre">
 			<!-- Sobre o projeto -->
-			<h2>Sobre o projeto</h2>
-			<p> <span class="image right"><img src="images/thumbs_proj/pinguins.jpg" alt=""></span>
-				Este é um projeto pessoal que consiste na análise do dataset obtido no Kaggle, com o objetivo de aplicar
-				os conhecimentos teóricos adquiridos nos cursos que estou realizando. O projeto possui 3 principais
-				focos:
+			<h2>About the project</h2>
+			<p> <span class="image right"><img src="images/thumbs/pinguins.png" alt=""></span>
+				This is a personal project that involves analyzing a dataset obtained from Kaggle, with the goal of applying the theoretical knowledge acquired from the courses I’m currently taking. The project has three main focuses:
 			</p>
 			<ul>
-				<li>Utilizar a linguagem de programação Python para manipulação e tratamento de dados</li>
-				<li>Realizar análises básicas a partir dos dados tratados</li>
-				<li>Obter maior conhecimento a respeito de técnicas de machine learning</li>
+				<li>Using the Python programming language for data manipulation and processing</li>
+				<li>Performing basic analyses on the processed data</li>
+				<li>Gaining deeper knowledge of machine learning techniques</li>
 			</ul>
-			<p>O dataset apresenta informações sobre espécies de pinguins. São 344 observações e 8 variáveis.</p>
+			<p>The dataset provides information about penguin species. There are 344 observations and 8 variables:</p>
 			<ul>
-				<li>species: espécie do pinguim, que pode ser Adelie, Gentoo ou Chinstrap</li>
-				<li>island: ilha na qual o pinguim se encontra, podendo ser Torgersen, Biscoe ou Dream</li>
-				<li>bill_length_mm: comprimento do bico do pinguim, em milímetros</li>
-				<li>bill_depth_mm: altura do bico do pinguim, em milímetros</li>
-				<li>flipper_length_mm: comprimento da nadadeira do pinguim, em milímetros</li>
-				<li>body_mass_g: peso corporal do pinguim, em gramas</li>
-				<li>sex: se o pinguim é macho ou fêmea</li>
-				<li>year: ano de coleta da informação, podendo ser 2007, 2008 ou 2009</li>
+				<li>species: the species of the penguin, which can be Adelie, Gentoo or Chinstrap</li>
+				<li>island: the island where the penguin is found, which can be Torgersen, Biscoe or Dream</li>
+				<li>bill_length_mm: the length of the penguin's bill in millimeters</li>
+				<li>bill_depth_mm: the depth of the penguin's bill in millimeters</li>
+				<li>flipper_length_mm: the length of the penguin's flipper in millimeters</li>
+				<li>body_mass_g: the body mass of the penguin in grams</li>
+				<li>sex: whether the penguin is male or female</li>
+				<li>year: the year the data was collected (2007, 2008 or 2009)</li>
 			</ul>
 
 			<!-- Etapas iniciais -->
-			<h2>Etapas iniciais</h2>
-			<p> O primeiro passo foi importar as bibliotecas necessárias, abrir o arquivo CSV e
-				verificar como estavam os dados. </p>
+			<h2>Initial steps</h2>
+			<p> 
+				The first step was to import the necessary libraries, open the CSV file, and check how the data looked. 
+			</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_01.png" alt="" /></span>
-			<p> Alguns tratamentos realizados nessa etapa inicial foram:</p>
+			<p> Some of the data treatments performed during this initial stage included:</p>
 			<ul>
-				<li>Remoção da primeira coluna do dataset</li>
-				<li>Verificação dos tipos de variáveis</li>
-				<li>Tratamento de valores numéricos nulos (bill_length_mm, bill_depth_mm, flipper_length_mm e
-					body_mass_g): os valores faltantes foram preenchidos com os valores médios dos pinguins da mesma
-					espécie</li>
-				<li>Tratamento de valores nulos da categoria sex: aplicação de um modelo de árvore de decisão para
-					prever o sexo dos pinguins a partir das outras variáveis</li>
+				<li>Removing the first column of the dataset</li>
+				<li>Checking the data types of the variables</li>
+				<li>Treating missing numerical values (bill_length_mm, bill_depth_mm, flipper_length_mm, and body_mass_g): missing values were filled with the average values of penguins from the same species</li>
+				<li>Treating missing values in the sex category: a decision tree model was applied to predict the sex of the penguins based on the other variables</li>
 			</ul>
 
-			<p> Com a base de dados tratada, iniciou-se o processo de análise exploratória dos dados.</p>
+			<p> With the dataset cleaned and preprocessed, the exploratory data analysis (EDA) process was initiated.</p>
 
 			<!-- Análise exploratória -->
 			<h2>
-				Análise exploratória
+				Exploratory data analysis
 			</h2>
-			<p> O primeiro passo foi verificar as medidas descritivas das variáveis numéricas. Os valores da média e da
-				mediana de todas as variáveis são relativamente próximos, indicando possivelmente distribuições
-				simétricas. </p>
+			<p>
+				The first step was to check the descriptive statistics of the numerical variables. The mean and median values of all variables are relatively close, possibly indicating symmetric distributions.
+			</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_02.png" alt="" /></span>
-			<p> A partir daí, algumas análises de proporção foram realizadas. A primeira delas foi a divisão de pinguins
-				por espécies, por ilha e por sexo. Algumas considerações e questionamentos foram levantados a partir da
-				análise dos gráficos: </p>
+			<p>
+				From there, some proportion analyses were conducted. The first analyses involved the distribution of penguins by species, by island, and by sex. Several considerations and questions were raised from the graphical analysis:
+			</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_03.png" alt="" /></span>
 			<ul>
-				<li>A maior parte dos pinguins é da espécie Adelie (44%)</li>
-				<li>A maior parte dos pinguins se encontra na ilha Biscoe (49%)</li>
-				<li>Os pinguins estão igualmente divididos entre machos e fêmeas</li>
-				<li>As proporções de espécies são semelhantes às proporções de quantidade de pinguins nas ilhas</li>
-				<li>Qual será a proporção de espécies em cada ilha?</li>
-				<li>Qual será a proporção de machos e fêmeas por espécie? E por ilha?</li>
-				<li>Quais as proporções por ano?</li>
+				<li>Most of the penguins belong to the Adelie species (44%).</li>
+				<li>Most of the penguins are found on Biscoe Island (49%).</li>
+				<li>Penguins are equally split between males and females.</li>
+				<li>The species proportions are similar to the proportions of penguins on the islands.</li>
+				<li>What will be the species proportions on each island?</li>
+				<li>What will be the male and female proportions by species? And by island?</li>
+				<li>What are the yearly proportions?</li>
 			</ul>
-			<p>Para responder os questionamentos levantados, outros gráficos foram elaborados:</p>
+			<p>To answer these questions, other graphs were created:</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_04.png" alt="" /></span>
 			<ul>
-				<li>A ilha Torgersen é habitada apenas pelos pinguins Adelie</li>
-				<li>Os pinguins Adelie habitam as três ilhas</li>
-				<li>Os pinguins Gentoo habitam apenas a ilha Biscoe e compõem 74% dos pinguins da ilha</li>
-				<li>Os pinguins Chinstrap habitam apenas a ilha Dream e compõem 55% dos pinguins da ilha</li>
+				<li>Torgersen Island is inhabited exclusively by Adelie penguins.</li>
+				<li>Adelie penguins inhabit all three islands.</li>
+				<li>Gentoo penguins inhabit only Biscoe Island and make up 74% of the penguins there.</li>
+				<li>Chinstrap penguins inhabit only Dream Island and make up 55% of the penguins there.</li>
 			</ul>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_05.png" alt="" /></span>
 			<ul>
-				<li>A ilha Torgersen, que é habitada apenas pelos pinguins Adelie, possui maior parte de pinguins fêmeas
-					(52%)</li>
-				<li>As ilhas Biscoe e Dream, apesar de serem habitadas por duas espécies diferentes de pinguins, possuem
-					proporção (praticamente) igual de machos e fêmeas</li>
+				<li>Torgersen Island, inhabited exclusively by Adelie penguins, has a majority of female penguins (52%).</li>
+				<li>Biscoe and Dream Islands, although inhabited by two different penguin species, have an (almost) equal proportion of males and females.</li>
 			</ul>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_06.png" alt="" /></span>
 			<ul>
-				<li>Todas as espécies apresentam praticamente a mesma quantidade de machos e fêmeas</li>
+				<li>All species have almost the same number of males and females.</li>
 			</ul>
-			<p>Também foram realizadas algumas análises por ano: </p>
+			<p>Yearly analyses were also performed:</p>
 			<ul>
-				Ilha Biscoe:
-				<li>De 2007 para 2008 houve um aumento no número de registros de pinguins das duas espécies</li>
-				<li>De 2008 para 2009 os registros diminuíram, mas ainda se mantiveram acima dos números de 2007</li>
-				Ilha Dream:
-				<li>Ao contrário da ilha Biscoe, os números das duas espécies diminuíram de 2007 para 2008</li>
-				<li>De 2008 para 2009 houve um aumento, com os valores retornando próximos aos de 2007</li>
-				Ilha Torgersen:
-				<li>De 2007 para 2008 o número de registros de pinguins Adelie diminuiu</li>
-				<li>Esse número se manteve o mesmo nos anos de 2008 e 2009</li>
+				Biscoe Island:
+				<li>From 2007 to 2008, there was an increase in the number of penguin records for both species.</li>
+				<li>From 2008 to 2009, the number of records decreased but remained above the 2007 levels.</li>
+				Dream Island:
+				<li>Unlike Biscoe Island, the numbers for both species decreased from 2007 to 2008.</li>
+				<li>From 2008 to 2009, there was an increase, with the numbers returning close to the 2007 levels.</li>
+				Torgersen Island:
+				<li>From 2007 to 2008, the number of Adelie penguin records decreased.</li>
+				<li>This number remained the same in 2008 and 2009.</li>
 			</ul>
-			<p> Ainda, foram avaliadas as características de cada uma das espécies por meio de boxplots: </p>
+			<p> In addition, the characteristics of each species were evaluated using boxplots:</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_07.png" alt="" /></span>
 			<ul>
-				<li>A espécie Gentoo aparentemente é maior que as outras duas, com pinguins mais pesados e de nadadeiras
-					maiores, com bicos compridos porém finos</li>
-				<li>As espécies Adelie e Chinstrap possuem peso corporal e altura do bico semelhantes, mas os Chinstrap
-					possuem comprimentos de bico e nadadeira maiores</li>
+				<li>The Gentoo species appears to be larger than the other two, with heavier penguins and longer flippers, as well as long but narrow bills.</li>
+				<li>The Adelie and Chinstrap species have similar body weights and bill depths, but Chinstrap penguins have longer bills and flippers.</li>
 			</ul>
-			<p> Algumas visualizações também foram elaboradas com o objetivo de entender a correlação entre as
-				variáveis: </p>
+			<p> Some visualizations were also created to understand the correlation between the variables:</p>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_08.png" alt="" /></span>
 			<span class="image fit no-overlay"><img src="images/projetos/pinguins/03_09.png" alt="" /></span>
 			<ul>
-				<li>Grande parte das variáveis apresenta uma distribuição que se assemelha à distribuição normal, porém
-					mais estreita</li>
-				<li>Aparentemente, considerando todas as espécies de pinguins, as variáveis de peso corporal e
-					comprimento de nadadeira são as que possuem correlação mais alta</li>
-				<li>Todas as matrizes de correlação são diferentes, indicando que cada espécie de pinguim possui suas
-					particularidades com relação às características analisadas</li>
-				<li>Considerando cada uma das espécies separadamente, a maior correlação ocorre entre o peso corporal e
-					o comprimento da nadadeira na espécie Gentoo (0.72)</li>
-				<li>A maior correlação de todas ocorre entre o peso corporal e o comprimento da nadadeira quando
-					consideramos todas as espécies (0.87), ou seja, quanto maior o peso corporal do pinguim, maior tende
-					a ser o comprimento de sua nadadeira</li>
+				<li>Most of the variables exhibit distributions similar to a normal distribution, though narrower.</li>
+				<li>Apparently, considering all penguin species, the variables for body weight and flipper length have the highest correlation.</li>
+				<li>All the correlation matrices are different, indicating that each penguin species has its own particularities regarding the analyzed characteristics.</li>
+				<li>Looking at each species separately, the highest correlation occurs between body weight and flipper length in the Gentoo species (0.72).</li>
+				<li>The highest overall correlation occurs between body weight and flipper length when considering all species (0.87). In other words, the heavier the penguin, the longer its flipper tends to be.</li>
 			</ul>
 
 			<!-- Redes neurais -->
 			</br>
-			<h2>Redes neurais</h2>
-			<p> Um modelo de redes neurais foi desenvolvido com o objetivo de classificar a espécie de pinguim de acordo
-				com as características de comprimento e largura do bico, comprimento da nadadeira e massa corporal.
-				Algumas das principais características e resultados do modelo: </p>
+			<h2>Neural networks</h2>
+			<p>
+				A neural network model was developed with the goal of classifying the penguin species based on the bill length and depth, flipper length, and body mass. Some of the main characteristics and results of the model are:
+			</p>
 			<ul>
-				<li>A arquitetura da rede é composta por 3 layers, sendo um de entrada (tamanho 4), um intermediário
-					(tamanho 10) e um de saída (tamanho 3)</li>
-				<li>Foi utilizada a função de ativação ReLU</li>
-				<li>Utilizou-se o critério de avaliação de perda de entropia cruzada e o algoritmo Adam para otimização
-				</li>
-				<li>A base de dados foi dividida em 70% treino e 30% teste</li>
-				<li>O modelo atingiu uma acurácia de 95%</li>
+				<li>The network architecture consists of 3 layers: an input layer (size 4), a hidden layer (size 10), and an output layer (size 3).</li>
+				<li>The ReLU activation function was used.</li>
+				<li>Cross-entropy loss was used as the evaluation criterion, and the Adam algorithm was used for optimization.</li>
+				<li>The dataset was split into 70% training and 30% testing.</li>
+				<li>The model achieved an accuracy of 95%.</li>
 			</ul>
 		</section>
 		<ul class="actions">
-			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Voltar</a></li>
+			<li><a href="portfolio.html" class="button icon solid fa-arrow-left">Back</a></li>
 		</ul>
 	</div>
 
